// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should do a snapshot test of the default Button DOM 1`] = `
<button
  className=" sendbird-button  sendbird-button--primary sendbird-button--big"
  disabled={false}
  type="button"
>
  <span
    className="sendbird-button__text sendbird-label sendbird-label--button-1 sendbird-label--color-oncontent-1"
  >
    Button
  </span>
</button>
`;

exports[`Button should do a snapshot test of the small Button DOM 1`] = `
<button
  className=" sendbird-button  sendbird-button--primary sendbird-button--small"
  disabled={false}
  type="button"
>
  <span
    className="sendbird-button__text sendbird-label sendbird-label--button-1 sendbird-label--color-oncontent-1"
  >
    Button
  </span>
</button>
`;
